QCHubPackage/main/default/objects/Cohort__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>a check box indicating if a cohort is active or not</description>
    <label>Currently Active</label>
    <type>Checkbox</type>
</CustomField>