QCHubPackage/main/default/objects/Cohort__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <formula>QC_Interview_Sum__c  /   QC_Interview_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>