QCHubPackage/main/default/objects/Cohort__c/fields/QC_Interview_Sum__c.field-meta.xml
<CustomField>
    <fullName>QC_Interview_Sum__c</fullName>
    <description>Sum of QC Interview scores (across all weeks) for calculating average QC score for this cohort (across all weeks)</description>
    <label>QC Interview Sum</label>
    <summarizedField>QC_Interview__c.QC_Score__c</summarizedField>
    <summaryForeignKey>QC_Interview__c.Cohort__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>