QCHubPackage/main/default/objects/Cohort__c/listViews/allColumns.listView-meta.xml
<ListView>
    <fullName>allColumns</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>allColumns</label>
</ListView>